<resources>
    <string name="app_name">NavigationTutorial</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="area_calculator">Area Calculator</string>
    <string name="studentNo">6282669</string>
    <string name="textViewName">Student</string>
    <string name="behnazkhalili">Khalili</string>
    <string name="student_card">Student Card</string>
    <string name="Behnaz">Behnaz</string>
</resources>